--- a/index.html
+++ b/index.html
@@ -3187,7 +3187,7 @@
 
 					
 			<div class="bg-white absolute -top-10 right-0 lg:right-10 p-4 px-8 rounded-md w-1/2 md:1/3 lg:w-1/4 min-h-full -mb-10 ele-1 z-10">
-				<h2 class="text-gray-700 py-4">Contact us</h2>
+				<h2 id="contacter" class="text-gray-700 py-4">Contact us</h2>
 				<form class="w-full " action="https://api.web3forms.com/submit" method="POST">
 					<input type="hidden" name="apikey" value="3f772dd4-6e8b-4497-b263-0d2b612ced24">
 						<input type="hidden" name="redirect" value="http://127.0.0.1:5500/success.html">
