--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 						</a>
 						<a href="#contacter"
-							class="border-moroi-Realred  bg-moroi-Realred text-white text-center py-2 focus-within rounded-full no-underline font-medium w-1/2 ele-1 hidden md:inline-block ">Nous
+							class="vibrate-1 border-moroi-Realred  bg-moroi-Realred text-white text-center py-2 focus-within rounded-full no-underline font-medium w-1/2 ele-1 hidden md:inline-block ">Nous
 							contacter
 						</a>
 					</div>
