--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 										</a>
 										<a href="#PRESENTATION"
 											class="flex flex-col items-center justify-center w-full h-full px-5 sm:h-10 sm:flex-row sm:justify-start hover:bg-gray-100">
-											<span class="font-light mt-1 text-sm sm:text-gray-500 sm:mt-0">PRÉSENTATION</span>
+											<span class="font-light mt-1 text-sm sm:text-gray-500 sm:mt-0">Présentation</span>
 										</a>
 										<a href="#services"
 											class="flex flex-col items-center justify-center w-full h-full px-5 sm:h-10 sm:flex-row sm:justify-start hover:bg-gray-100">
-											<span class="mt-1 text-sm font-light sm:text-gray-500 sm:mt-0">SERVICES</span>
+											<span class="mt-1 text-sm font-light sm:text-gray-500 sm:mt-0">Service</span>
 										</a>
 										<a href="https://moroi.desgin/questions"
 											class="flex flex-col items-center justify-center w-full h-full px-5 sm:h-10 sm:flex-row sm:justify-start hover:bg-gray-100">
@@ -113,11 +113,11 @@
 										<a href="#contacter"
 											class="flex flex-col items-center justify-center w-full h-full px-5 sm:h-10 sm:flex-row sm:justify-start hover:bg-gray-100">
 											<span class="mt-1 text-sm font-light sm:text-gray-500 sm:mt-0">Nous
-												contacter</span>
+												Contacter</span>
 										</a>
 										<a href="#faq"
 											class="flex flex-col items-center justify-center w-full h-full px-5 sm:h-10 sm:flex-row sm:justify-start hover:bg-gray-100">
-											<span class="mt-1 text-sm font-light sm:text-gray-500 sm:mt-0">FAQ</span>
+											<span class="mt-1 text-sm font-light sm:text-gray-500 sm:mt-0">Faq</span>
 										</a>
 									</div>
 								</div>
@@ -174,7 +174,7 @@
 								<a href="#PRESENTATION" class="pl-2 p-2 ml-1 text-sm hover:text-gray-100">PRÉSENTATION</a>
 								<a href="#services" class="p-2 text-sm hover:text-gray-100">SERVICES</a>
 								<a href="#faq" class="p-2 text-sm hover:text-gray-100">FAQ</a>
-								<a href="#brands" class="p-2 text-sm hover:text-gray-100">Les mark</a>
+								<a href="#brands" class="p-2 text-sm hover:text-gray-100">Les MARQUES</a>
 							</div>
 							<div class="ml-2 sm:ml-0">
 							</div>
