--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 							</svg>
 
 						</a>
-						<a href="#contacter"
+						<a href="#contacter" id="vibrate-1"
 							class="vibrate-1 border-moroi-Realred  bg-moroi-Realred text-white text-center py-2 focus-within rounded-full no-underline font-medium w-1/2 ele-1 hidden md:inline-block ">Nous
 							contacter
 						</a>
