--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 								<a href="#PRESENTATION" class="pl-2 p-2 ml-1 text-sm hover:text-gray-100">PRÉSENTATION</a>
 								<a href="#services" class="p-2 text-sm hover:text-gray-100">SERVICES</a>
 								<a href="#faq" class="p-2 text-sm hover:text-gray-100">FAQ</a>
-								<a href="#brands" class="p-2 text-sm hover:text-gray-100">Les MARQUES</a>
+								<a href="#brands" class="p-2 text-sm hover:text-gray-100">MARQUES</a>
 							</div>
 							<div class="ml-2 sm:ml-0">
 							</div>
