--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	<link rel="stylesheet" inline href="/css/custom.css">
 	<script inline src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
 	<link inline href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
+  <script src="https://unpkg.com/scrollama@2.1.4/build/scrollama.js"></script>
 	<title>Auto performance Guelma [Tuning] - algeria</title>
 </head>
 
@@ -159,8 +162,7 @@
 
 						</a>
 						<a href="#contacter" id="vibrate-1"
-							class="vibrate-1 border-moroi-Realred  bg-moroi-Realred text-white text-center py-2 focus-within rounded-full no-underline font-medium w-1/2 ele-1 hidden md:inline-block ">Nous
-							contacter
+							class="vibrate border-moroi-Realred  bg-moroi-Realred text-white text-center py-2 focus-within rounded-full no-underline font-medium w-1/2 ele-1 hidden md:inline-block ">Nous contacter
 						</a>
 					</div>
 				</div>
@@ -203,7 +205,7 @@
 		class="container lg:px-28 mx-auto prose my-10 md:my-20 flex flex-col justify-center items-center leading-3 px-10 text-white font-extrabold">
 
 		<h1 id="PRESENTATION"
-			class="text-5xl lg:text-7xl text-moroi-Realred self-start w-1/2 pb-3 container-sm antialiased">PRESENTATION</h1>
+			class=" text-5xl lg:text-7xl text-moroi-Realred self-start w-1/2 pb-3 container-sm antialiased">PRESENTATION</h1>
 		<h5 class="font-light text-lg lg:text-2xl antialiased">Nous faisons des modifications sur les fichiers que vous nous
 			avez envoyé, nos
 			tuning files respectent les contraintes et les normes mécaniques du constructeur et nos solutions sont testées sur
@@ -404,7 +406,7 @@
 
 	<!-- car tabs -->
 	<div id="brands" x-data="{
-		openTab: 5,
+		openTab: 1,
 		activeClasses: 'flex flex-row justify-center border border-moroi-stack transition-colors duration-300 bg-gradient-to-t from-moroi-stack to-gray-600 shadow rounded-md p-5 text-moroi-Realred ele-1 bg-moroi-stack cursor-pointer',
 		inactiveClasses: 'opacity-75 flex flex-row justify-center border border-moroi-stack shadow rounded-md p-5 text-white ele-1 transition-colors duration-300 bg-moroi-stack cursor-pointer bg-gradient-to-t hover:from-gray-700 hover:to-gray-600 hover:opacity-100'
 	}" class="container w-full p-10 grid grid-flow-col col-span-2 gap-5 justify-items-center mt-10">
@@ -449,7 +451,7 @@
 
 			<div x-show="openTab === 1" class="grid grid-cols-1 auto-cols-auto md:grid-cols-2 lg:grid-cols-3 justify-items-center  divide-grayw-800 gap-2">
 
-				<div class="grid grid-cols-1 grid-flow-row place-items-center place-content-between relative border border-grayw-800 w-3/4 ele-1 rounded">
+				<div class="scale-in-hor-center grid grid-cols-1 grid-flow-row place-items-center place-content-between relative border border-grayw-800 w-3/4 ele-1 rounded">
 					<img class="w-full h-auto place-self-center pt-1" inline src="/img/caddy.png" alt="">
 					<div class="grid grid-rows-3 place-items-center place-content-stretch w-full">
 				
