--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 				</div>
 
 				<div class="relative z-0">
-					<div class="z-20 w-full overflow-x-hidden text-gray-300 font-bold sm:overflow-x-hidden">
+					<div class="z-20 w-full overflow-x-hidden text-gray-300 font-semibold sm:overflow-x-hidden">
 						<div class="container flex items-center justify-between max-h-screen pt-1 mx-auto mt-2">
 							<div class="flex justify-start ml-5 sm:ml-0">
-								<a href="/" class="relative flex items-center pr-4 text-sm font-bold border-r border-moroi-Realred hover:text-gray-100">ACCUEIL</a>
+								<a href="/" class="relative flex items-center pr-4 md:text-sm lg:text-base border-r border-moroi-Realred hover:text-gray-100">ACCUEIL</a>
 								<a href="#PRESENTATION" class="pl-2 p-2 ml-1 hover:text-gray-100 sm:text-sm lg:text-base">PRÉSENTATION</a>
 								<a href="#services" class="p-2  hover:text-gray-100 md:text-sm lg:text-base">SERVICES</a>
 								<a href="#faq" class="p-2  hover:text-gray-100 md:text-sm lg:text-base">FAQ</a>
