--- a/index.html
+++ b/index.html
@@ -49,18 +49,19 @@
 						<a href="https://auto-performance.org" class="w-64 flex items-center inline-block md:hidden py-2 pr-4 cursor-pointer group">
 							<img src="/img/apr@0,25x.png" alt="">
 						</a>
-						<div class="hidden md:grid md:grid-cols-5  md:place-items-center md:place-content-start md:w-full ">
-							<img class="w-15 h-10 " src="/img/LandRover.svg" alt="">
+						<div class="hidden md:grid md:grid-cols-6  md:place-items-center md:place-content-start md:w-full ">
+							<img class="w-16 h-10 " src="/img/LandRover.svg" alt="">
 							<img class="w-15 h-10 " src="/img/bmw.svg"  alt="">
 							<img class="w-15 h-10 " src="/img/mercedes-benz-9.svg" alt="">
 							<img class="w-15 h-10 " src="/img/volkswagen-logo-png.png" alt="">
-							<img class="w-15 h-10 " src="/img/audi.png" alt="">
+							<img class="w-15 h-11 " src="/img/audi.png" alt="">
+							<img class="w-15 h-11 " src="/img/jaguar.png" alt="">
 						</div>
 					</div>
 					<div class="">
 						<a href="https://auto-performance.org" class="hidden relative md:inline-block py-2 cursor-pointer group">
 							<img class="hidden md:inline-block lg:hidden" src="/img/apr@0,33x.png" alt="">
-							<img class="hidden lg:inline-block" src="/img/apr@0,5x.png" alt="">
+							<img class="hidden lg:inline-block" src="/img/apr@0,75x.png" alt="">
 						</a>
 					</div>
 
@@ -134,7 +135,7 @@
 			<div class="swiper-slide"><img class="w-screen" src="/img/chipx.png" 
 						alt="">
 			</div>
-			<div class="swiper-slide"><img class="w-screen" src="/img/puissanceh@0.75x.png"
+			<div class="swiper-slide"><img class="w-screen" src="/img/puissance@0.75x.png"
 					alt=""></div>
 			<div class="swiper-slide"><img class="w-screen" src="/img/DECALAMINAGE.png"
 					alt=""></div>		
