--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 								<a href="#faq" class="p-2  hover:text-gray-100 md:text-sm lg:text-base">FAQ</a>
 								<a href="#brands" class="p-2 hover:text-gray-100 md:text-sm lg:text-base">MARQUES</a>
 							</div>
-							<div class="sm:relative right-auto hidden md:inline-block text-white font-semibold flex">
+							<div class="sm:relative right-auto hidden md:inline-block text-white font-bold text-2xl flex">
 								<span></span>
 								<a href="https://wa.me/+213770646180/">Tel : +213 670 16 80 60</a>
 							 
