--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="">
 						<a href="https://auto-performance.org" class="hidden relative md:inline-block py-2 cursor-pointer group">
 							<img class="hidden md:inline-block lg:hidden" src="/img/apr@0,33x.png" alt="">
-							<img class="hidden lg:inline-block" src="/img/apr@0,75x.png" alt="">
+							<img class="hidden lg:inline-block lg:pt-2" src="/img/apr@0,75x.png" alt="">
 						</a>
 					</div>
 
