--- a/index.html
+++ b/index.html
@@ -149,25 +149,25 @@
 <div class="wow animate__animated animate__bounceInLeft animate__slower w-full h-full border border-moroi-stack py-5 flex flex-nowrap flex-col justify-center cursor-pointer bg-moroi-Realred ele-1 icon-service-red">
 			<a href="#info1">
 			<img class="mx-auto" src="img/meter.icon_.png" alt="">
-			<h2 class="antialisaed text-center leading-5 overflow-pre whitespace-normal mx-auto text-xl">Augmentation de puissance du Vehicule Jusqu'a 25%</h2>
+			<h2 class="antialisaed text-center leading-5 overflow-pre whitespace-normal mx-auto text-xl textsh">Augmentation de puissance du Vehicule Jusqu'a 25%</h2>
 			</a>
 		</div>
 		
 		<div class="wow animate__animated animate__bounceInLeft animate__slower w-full h-full border border-moroi-stack ele-1 p-5 flex flex-nowrap flex-col justify-center cursor-pointer icon-service">
 			<a href="#info2"><img class="mx-auto" src="img/couple+.png" alt="">
-			<h2 class="antialisaed text-center leading-5 overflow-pre whitespace-normal mx-auto text-xl">Garantir une augmentation du couple Jusqu'a 35%.</h2>
+			<h2 class="antialisaed text-center leading-5 overflow-pre whitespace-normal mx-auto text-xl textsh">Garantir une augmentation du couple Jusqu'a 35%.</h2>
 			</a>
 		</div>
 		<div class="wow animate__animated animate__bounceInLeft animate__slower w-full h-full py-5 border border-moroi-stack flex flex-nowrap flex-col justify-center cursor-pointer bg-moroi-Realred ele-1 icon-service-red">
 			<a href="#info3">
 			<img class="mx-auto" src="img/fuel+.png" alt="">
-			<h2 class="antialisaed text-center leading-5 overflow-pre whitespace-normal mx-auto text-xl">Une Diminution de la consommation jusqu'a 10%.</h2>
+			<h2 class="antialisaed text-center leading-5 overflow-pre whitespace-normal mx-auto text-xl textsh">Une Diminution de la consommation jusqu'a 10%.</h2>
 			</a>
 		</div>
 		<div class="wow animate__animated animate__bounceInLeft animate__slower w-full h-full border border-moroi-stack ele-1 p-5 flex flex-nowrap flex-col justify-center cursor-pointer icon-service">
 			<a href="#info4">
 			<img class="mx-auto" src="img/adblue+.png" alt="">
-			<h2 class="antialisaed text-center leading-5 overflow-pre whitespace-normal mx-auto text-xl">Desactiver les systems (FAP / EGR / ADBLUE )</h2>
+			<h2 class="antialisaed text-center leading-5 overflow-pre whitespace-normal mx-auto text-xl textsh">Desactiver les systems (FAP / EGR / ADBLUE )</h2>
 			</a>
 		</div>
 	</div>
