--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="auto performance, reparation et Diagnostic, Tuninges voitures en algerie">
-	<meta name="keywords" content="Auto performance, tuning, car mechanic, garage, algerie, guelma, algeria">
+	<meta name="keywords" content="Auto performance, tuning, car mechanic, garage, algerie, guelma, top garage guelma, auto guelma">
 	<meta name="csrf-token" content="XuRwFP5GwumrioYtMuKZ9tUnUrQA65ZUSMuhquWd">
 	<meta name="url" content="">
 
